<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 Peter Mösenthin <peter.moesenthin@gmail.com>

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

        http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<resources>

    <!-- App -->
    <string name="app_name">Alarming</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_cancel">Cancel</string>

    <!-- .MainActivity -->
    <string name="textView_drawer_settings">Settings</string>
    <string name="textView_drawer_about">About</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string-array name="nav_drawer_titles">
        <item>Alarm</item>
        <item>Audio</item>
    </string-array>

    <!-- fragments/SetAlarmFragment -->
    <string name="textView_alarmTime">--:--</string>
    <string name="checkbox_vibrate">Vibrate</string>
    <string name="toast_alarmTimeNotSet">Could not set Alarm! No time set.</string>
    <string name="textView_am_pm">-</string>
    <string name="checkbox_repeat">Repeat</string>
    <string name="textView_chooseColor">Choose color</string>
    <string name="textView_alarmText">Wake up!</string>
    <string-array name="alarm_texts">
        <item>Wake up!</item>
        <item>Time to get out of bed!</item>
        <item>No excuses this time!</item>
        <item>You have to do better than that!</item>
        <item>Don\'t press snooze!</item>
    </string-array>

    <!-- fragments/SoundManagerFragment -->
    <string name="action_save_config">Save configuration</string>
    <string name="action_add_new_sound">Add new sound</string>
    <string name="alertTitle_wrongFileType">Can\'t read file!</string>
    <string name="alert_wrongFileType">It appears that you opened an unsupported or corrupted file.
        Select a different file.</string>
    <string name="alertTitle_delete_file">Delete file</string>
    <string name="alert_delete_file">Are you sure that you want to delete this file? The
        configuration will stay saved.</string>

    <string-array name="sound_action_options">
        <item>Edit</item>
        <item>Delete</item>
    </string-array>

    <!-- .AlarmReceiverAcitivity -->
    <string name="button_snooze">Snooze alarm for %1$s</string>
    <string name="minute">minute</string>
    <string name="minutes">minutes</string>
    <string name="button_dismiss">Swipe to dismiss</string>

    <!-- .AboutActivity -->
    <string name="activity_title_about">Settings</string>
    <string-array name="about_actions">
        <item>About this app</item>
        <item>Licenses</item>
    </string-array>

    <!-- .SettingsActivity -->
    <string name="activity_title_settings">Settings</string>

    <string name="settings_category_general">General</string>
    <string name="settings_show_notification_title">Show Notifications</string>
    <string name="settings_show_notification_summary">Show a notification when an alarm is scheduled
    </string>

    <string name="settings_category_media_playback">Media Playback</string>
    <string name="settings_alarm_sound_volume_title">Alarm sound volume</string>
    <string name="dialog_title_alarm_sound_volume">Set alarm volume</string>
    <string name="settings_alarm_sound_volume_summary">Set the volume level for alarms</string>

    <string name="settings_category_alarm">Alarm</string>
    <string name="settings_snooze_time_title">Snooze time</string>
    <string name="settings_snooze_time_summary">Set the amount of time to snooze an alarm</string>
    <string name="dialog_title_set_snooze_time">Set snooze time</string>

    <!-- .AlarmSoundEditActivity -->
    <string name="activity_title_alarmSoundEdit">Edit audio file</string>
    <string name="textView_soundTitle">Title</string>
    <string name="textView_soundArtist">Artist</string>
    <string name="textView_soundStart">Start</string>
    <string name="textView_soundEnd">End</string>
    <string name="textView_soundLength">Absolute length</string>
    <string name="toast_config_saved">Configuration saved</string>
    <string name="button_play">Play</string>
    <string name="button_pause">Pause</string>
    <string name="button_stop">Stop</string>

    <!-- Notifications -->
    <string name="notification_alarmActivated">Alarm set</string>
    <string name="notification_timeSetTo">Time set to</string>
    <!-- <string name="action_settings">Settings</string> -->

    <string name="notification_snoozeActivated">Alarm snoozed</string>
    <string name="notification_cancelSnooze">Cancel</string>

    <string name="about_this_app">Alarming will help you get out of bed with a smile :)
        Wake up to your favorite music and choose exactly what part of a song will play.
        Set up all your songs and Alarming will pick one. Never be annoyed by your alarm sound
        again!
    </string>
    <string name="dialog_title_set_alarm_message">Set alarm message</string>
    <string name="dialog_title_set_alarm_color">Set alarm color</string>


</resources>
