<?xml version="1.0" encoding="utf-8"?>
<!--
	Alarming, an alarm app for the Android platform

	Copyright (C) 2014-2015 Peter Mösenthin <peter.moesenthin@gmail.com>

	Alarming is free software: you can redistribute it and/or modify
	it under the terms of the GNU General Public License as published by
	the Free Software Foundation, either version 3 of the License, or(at your option) any later version.

	This program is distributed in the hope that it will be useful,
	but WITHOUT ANY WARRANTY; without even the implied warranty of
	MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
	GNU General Public License for more details.

	You should have received a copy of the GNU General Public License
	along with this program.  If not, see <http://www.gnu.org/licenses/>.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:layout_marginLeft="16dp"
	android:layout_marginRight="16dp"
	android:isScrollContainer="true"
	android:orientation="vertical">

	<TextView
		android:id="@+id/textView_category_general"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:text="@string/settings_category_general"
		android:textColor="@color/material_black"
		android:textSize="16sp"
		android:textStyle="bold" />

	<View
		android:id="@+id/view_divider_big_1"
		android:layout_width="match_parent"
		android:layout_height="2dp"
		android:layout_marginBottom="1dp"
		android:layout_marginTop="2dp"
		android:background="@color/veryLightGray" />

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:minHeight="48dp"
		android:orientation="horizontal"
		android:background="@drawable/selector_basic_yellow"
		android:padding="5dp">

		<LinearLayout
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="0.97"
			android:orientation="vertical">

			<TextView
				android:id="@+id/textView_setting_notification_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/settings_show_notification_title"
				android:textSize="18sp" />

			<TextView
				android:id="@+id/textView_setting_notification_summary"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/settings_show_notification_summary" />
		</LinearLayout>

		<CheckBox
			android:id="@+id/checkBox_setting_notification"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:layout_weight="0.03" />
	</LinearLayout>

	<TextView
		android:id="@+id/textView_category_alarm"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="5dp"
		android:text="@string/settings_category_alarm"
		android:textColor="@color/material_black"
		android:textSize="16sp"
		android:textStyle="bold" />

	<View
		android:id="@+id/view_divider_big_3"
		android:layout_width="match_parent"
		android:layout_height="2dp"
		android:layout_marginBottom="1dp"
		android:layout_marginTop="2dp"
		android:background="@color/veryLightGray" />


	<LinearLayout
		android:id="@+id/linearLayout_setSnoozeTime"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="?android:attr/selectableItemBackground"
		android:orientation="horizontal"
		android:padding="5dp">


		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="48dp"
			android:orientation="vertical">

			<TextView
				android:id="@+id/textView_snooze_time_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/settings_snooze_time_title"
				android:textSize="18sp" />

			<TextView
				android:id="@+id/textView_snooze_time_summary"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/settings_snooze_time_summary" />
		</LinearLayout>
	</LinearLayout>

	<View
		android:id="@+id/view_divider_small_2"
		android:layout_width="match_parent"
		android:layout_height="1dp"
		android:background="@color/veryLightGray" />

	<LinearLayout
		android:id="@+id/linearLayout_setAlarmVolume"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:background="?android:attr/selectableItemBackground"
		android:orientation="horizontal"
		android:padding="5dp">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:minHeight="48dp"
			android:orientation="vertical">

			<TextView
				android:id="@+id/textView_alarm_sound_volume_title"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/settings_alarm_sound_volume_title"
				android:textSize="18sp" />

			<TextView
				android:id="@+id/textView_alarm_sound_volume_summary"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/settings_alarm_sound_volume_summary" />
		</LinearLayout>
	</LinearLayout>

</LinearLayout>